Fixed an issue with header on small screens and removed style.css because it is not needed (style.styl gets autocompiled into style.css)

--- a/res/css/style.styl
+++ b/res/css/style.styl
@@ -30,3 +30,9 @@ footer
         top 25px
         left 50%
         transform translate(-50%)
+
+@media screen and (max-width: 639px)
+    header
+        .row 
+            .column.column-50
+                flex: none
